Changed DB credentials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ ENDIF(VERSION_SUFFIX)
 SET(QT_MIN_VERSION "4.4.0")
 SET(QT_USE_QTSQL TRUE)
 FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtSql REQUIRED)
-find_package(Qwt REQUIRED)
+#find_package(Qwt REQUIRED)
 
 INCLUDE(${QT_USE_FILE})
 
@@ -92,10 +92,12 @@ QT4_WRAP_UI(HMI_UIC_out ${HMI_UI})
 #QT4_ADD_RESOURCES(HMI_RCC_out data/HMI.qrc)
 
 #INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/libmodbus ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/libmodbus/src ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/qextserialport ${CMAKE_BINARY_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${QWT_INCLUDE_DIR})
+#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${QWT_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR} )
 #LINK_LIBRARIES(${QT_LIBRARIES} ${QWT_LIBRARY})
 ADD_EXECUTABLE(admin ${HMI_SOURCES} ${HMI_UIC_out} ${HMI_MOC_out} ${HMI_RCC_out})
-target_link_libraries(admin ${QT_LIBRARIES} ${QWT_LIBRARY})
+#target_link_libraries(admin ${QT_LIBRARIES} ${QWT_LIBRARY})
+target_link_libraries(admin ${QT_LIBRARIES})
 #INSTALL(TARGETS admin RUNTIME DESTINATION bin)
 
 
